@@ -1,3 +1,14 @@
+3/5/2013 Jet Goodson <jetgoodson@gmail.com>
+    A plots/*
+    M utilityBelt.R
+    * constructed feature plotting	
+    M rage...
+    * add custom tune function using parallel processing
+    * added predict function
+    M LitteraLector.R
+    * added predict tool
+    * switched the sink to include a log file
+	
 3/3/2013 Jet Goodson <jetgoodson@gmail.com>
     M utilityBelt.R
     M LitteraLector.R
